# MAPLE

./: .dockerignore  .env.example  .gitignore  DEPLOY_HF.md  Dockerfile  LICENSE  README.md  app.py  chainlit.md  debug_render.py  debug_test.py  maple.txt.pub  pyproject.toml  requirements.txt
.chainlit/: config.toml
.github/workflows/: ci.yml
agents/: __init__.py  consensus_agent.py  evidence_agent.py  marker_agent.py  paper_ranking.py  query_builder.py  reviewer_agent.py
data/: marker_rules.json
maple/: __init__.py  api.py  config.py  input_parser.py  models.py
maple/extraction/: biomedical_scorer.py  evidence_signals.py  prompts.py  schemas.py  validators.py  window_extract.py
maple/literature/: pmc.py  pubmed.py  pubtator.py
maple/runtime/: candidate_agent.py  consensus_agent.py  devils_advocate_agent.py  evidence_agent.py  orchestrator.py  retrieval_agent.py  state.py
maple/ui/: __init__.py  audit_trail.py  components.py  table.py
models/: __init__.py  schemas.py
public/: custom.css  custom.js
scripts/: run_evals.py
services/: __init__.py  cache_service.py  fulltext_service.py  gitlab_llm_service.py  llm_service.py  ncbi_pmc_service.py  openalex_service.py  preprint_service.py  pubmed_service.py  scholar_service.py
tests/: conftest.py  test_api.py  test_at2_markers.py  test_bulk_input_parser.py  test_candidate_agent.py  test_consensus_agent.py  test_evidence_agent.py  test_evidence_signals.py  test_fulltext_ranking.py  test_gene_parser.py  test_input_parser.py  test_literature_first_scoring.py  test_literature_primary.py  test_llm_provider.py  test_markdown_safe.py  test_models.py  test_paper_ranking.py  test_pubmed_service.py  test_query_builder.py  test_reviewer.py  test_scholar_and_preprint.py  test_scoring.py  test_table.py  test_ui_components.py  test_validators.py
tests/fixtures/: sample_state.py
utils/: __init__.py  bulk_input_parser.py  cell_type_lexicon.py  gene_aliases.py  gene_parser.py  markdown_safe.py  progress_tracker.py  scoring.py  ui_components.py
